[package]
name = "mongo-lock-async"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Distributed mutex locks with MongoDB"
keywords = ["distributed", "locking", "concurrency", "mongo", "mongodb"]
authors = ["Pavel Lazureykis"]
documentation = "https://docs.rs/mongo-lock-async"
repository = "https://github.com/lazureykis/mongo-lock-async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2"
tokio = "1"

[dev-dependencies]
rand = "0"
